@@ -17,6 +17,9 @@ default.
 * Attribute labels gets a Yii::t('app', <label>) wrapper to make easier i18n possible 
 * If a column is called <em> create_time, createtime, update_time, updatetime or timestamp </em> the CTimestampBehavior shipped with zii will automatically added as a behavior 
 * If a column is called <em> created_by, createdby, user, user_id, owner or owner_id </em> the OwnerBehavior shipped with the gii-template-collection will automatically added as a behavior 
+* Added model relations to view templates
+* Added demo schema (MySQL)
+
 
 Version 0.5
 -----------
